--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,16 @@
-@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap");
 body {
   margin: 0;
   background-color: rgb(205, 205, 205) !important;
 }
-:root { font-family: 'Inter', sans-serif !important; }
+
+.dark-mode body {
+  background-color: rgb(10, 4, 22);
+}
+
+:root {
+  font-family: 'Inter', sans-serif !important;
+}
+
 @supports (font-variation-settings: normal) {
   :root { font-family: 'Inter var', sans-serif !important; }
 }
